--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/0bdbe266da.js" crossorigin="anonymous"></script>
+    <!-- jquery.js -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="js/email.js"></script>
     <title>The E.K.K.O Academy</title>
 </head>
 <body>
@@ -30,12 +33,12 @@
                 <div class="signupform">
                     <h3>Signup for our whitelist</h3>
                     <hr>
-                    <p>Please enter your email & ERC20 Wallet Address in the box below for a chance to get whitelisted for our presale </p>
+                    <p>Please enter your email & ERC20 Wallet Address in the box below for a chance to get whitelisted for our presale</p>
                     <form>
-                        <input type="email" placeholder="Email" required>
-                        <input type="erc20 wallet address" placeholder="ERC20 Wallet Address" required>
+                        <input type="email" id="mail" placeholder="Email" required>
+                        <input type="text" id="wallet" placeholder="ERC20 Wallet Address (ETH)" required>
                         <br>
-                        <button type="submit">Submit</button>
+                        <button type="submit" id="submit-email">Submit</button>
                     </form>
 
                 </div>
@@ -59,7 +62,5 @@
         </div>
 
     </section>
-<script src="app.js"></script>
-<script src="vanilla-tilt.js"></script>
 </body>
 </html>
