--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
                     <form>
                         <input type="email" id="mail" placeholder="Email" required>
                         <input type="text" id="wallet" placeholder="ERC20 Wallet Address (ETH)" required>
+                        <span class="errors" style="color:red"></span>
                         <br>
                         <button type="submit" id="submit-email">Submit</button>
+                        </span>
                     </form>
 
                 </div>
